{
    "name": "InputHandler",
    "maps": [
        {
            "name": "CameraControls",
            "id": "ae3f6e45-4b0e-43f3-878c-2fa202da4e26",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "45eb1e4d-2380-4a1f-9aa6-c5473e846725",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "818b3114-b6f1-4217-b011-c1ddcd885c4a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ActivateMouseLook",
                    "type": "Button",
                    "id": "2a59a5ff-1e2d-4044-8318-6038a449d0c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "66ada724-6272-4516-a1b3-1d7f99a794da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectSpectate",
                    "type": "Button",
                    "id": "bccfa200-83e7-4eb6-ac7e-6f13a1292367",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ExitSpectate",
                    "type": "Button",
                    "id": "2c0a7888-81c0-4504-bf8a-7ff7ab87b5e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "284a9408-c9e5-47ca-b902-b20b5d37440d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "56e982e5-89b9-490d-bf11-4603cb5c7c3e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "09119473-fe36-47c9-a0fa-71395eb0571a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a227890a-cbde-48a9-9be1-f31106478754",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4ae24795-2464-4a59-bef7-3d94fc8afe87",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c4c9fc21-6dfb-4333-9276-706e098e1cf4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9e45d5da-dcf8-4263-a630-f7c72d42156c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateMouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "751c1bb3-d3c8-4422-91dd-e150bde3e7fd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c78c6a4-54d8-4d1d-85d1-2b1291d2c919",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSpectate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "509dd83c-b8c4-4f2b-8010-d7809db5552f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitSpectate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}